syntax = "proto3";
package comdex.bandoracle.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/bandoracle/types";

// Params defines the parameters for the module.
message Params {
  string creator = 1;
  string oracle_script_id = 2;
  string source_channel = 3;
  string ask_count = 5;
  string min_count = 6;
  repeated cosmos.base.v1beta1.Coin fee_limit = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string prepare_gas = 9;
  string execute_gas = 10;
}
